fixed global font & footer alignment

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -30,6 +30,7 @@ footer {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    grid-row:span 3;
   }
   
   .bottom-left li {
@@ -40,7 +41,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin-top: 20px;
+    text-align: right;
   }
   
   .transparent-button {
